# mantacam

./: .gitignore  CHANGELOG.rst  README.md  build.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
mantacam/: __init__.py  cmanta.cpp  manta.py
mantacam/etc/: cameras.yaml
mantacam/src/: cmanta.cpp
