[tool.poetry]
name = "mantacam"
version = "0.1.0"
description = "Example for baseCam using a Manta camera"
authors = ["José Sánchez-Gallego <gallegoj@uw.edu>"]
license = "BSD-3-Clause"
build = 'build.py'

[tool.poetry.dependencies]
python = "^3.7"
pybind11 = "^2.3.0"
# sdss-baseCam = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
