[metadata]
name = sdss-mantacam
version = attr: mantacam.__version__
author = José Sánchez-Gallego
author_email = gallegoj@uw.edu
description = A controller and actor for Manta cameras based on basecam
project_urls =
    Source Code = https://github.com/sdss/mantacam
    Documentation = sdss-mantacam.readthedocs.org
long_description = file: README.md
long_description_content_type = text/markdown
keywords = astronomy, software
license = BSD 3-Clause License
license_file = file: LICENSE.md
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Topic :: Documentation :: Sphinx
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
python_requires = >=3.7
include_package_data = True
packages = find:
install_requires =
  numpy
  pybind11>=2.3

[options.package_data]
* = CODEOWNERS

[options.extras_require]
dev =
    flake8
    ipython
    pytest
    pytest-cov
    pytest-sugar

docs =
    Sphinx>=1.8.0
    releases>=1.6.1
    sphinxcontrib-trio>=1.0.1
    sphinx-click>=1.3.0


[isort]
line_length=99
lines_after_imports=2
use_parentheses=true
balanced_wrapping=true


[flake8]

ignore =
    # H101: Use TODO(NAME)
    H101

max-line-length = 99


[bumpversion]
current_version = 0.1.0dev
commit = True
tag = False
tag_name = {new_version}
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(?P<release>[a-z]+)?
serialize =
	{major}.{minor}.{patch}{release}
	{major}.{minor}.{patch}

[bumpversion:part:release]
optional_value = alpha
values =
	dev
	alpha

[bumpversion:file:mantacam/__init__.py]


[coverage:run]
branch = true
