[metadata]
name = sdss-mantacam
version = 0.1.0dev
author = José Sánchez-Gallego
author_email = gallegoj@uw.edu
description = A controller and actor for Manta cameras based on basecam
url = https://github.com/sdss/mantacam
project_urls =
    Repository = https://github.com/sdss/mantacam
    Documentation = sdss-mantacam.readthedocs.org
long_description = file: README.md
long_description_content_type = text/markdown
keywords = astronomy, software
license = BSD 3-Clause License
license_file = LICENSE.md
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Topic :: Documentation :: Sphinx
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
python_requires = >=3.7
include_package_data = True
packages = find:
install_requires =
    sdss-basecam
    numpy
setup_requires =
    pybind11>=2.3

[options.extras_require]
dev =
    flake8
    ipython
    pytest
    pytest-cov
    pytest-sugar
    invoke
    bump2version
    wheel

docs =
    Sphinx>=1.8.0
    releases>=1.6.1
    sphinxcontrib-trio>=1.0.1
    sphinx-click>=1.3.0


[isort]
line_length=99
lines_after_imports=2
use_parentheses=true
balanced_wrapping=true


[flake8]
ignore =
	H101
	E722
	W504
	W505
max-line-length = 99


[bumpversion]
current_version = 0.1.0dev
commit = True
tag = False
tag_name = {new_version}
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(?P<release>[a-z]+)?
serialize =
	{major}.{minor}.{patch}{release}
	{major}.{minor}.{patch}

[bumpversion:part:release]
optional_value = alpha
values =
	dev
	alpha

[bumpversion:file:mantacam/__init__.py]
[bumpversion:file:setup.cfg]


[coverage:run]
branch = true
